--- a/Backstage/citi/pom.xml
+++ b/Backstage/citi/pom.xml
@@ -25,7 +25,6 @@
   </properties>
 
   <dependencies>
-
     <!-- 单元测试依赖 -->
     <dependency>
       <groupId>junit</groupId>
@@ -33,7 +32,16 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-core</artifactId>
+      <version>2.4.3</version>
+    </dependency>
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.4.3</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
     <dependency>
       <groupId>org.mybatis</groupId>
@@ -101,7 +109,6 @@
       <version>2.8.1</version>
     </dependency>
   </dependencies>
-
   <build>
     <finalName>citi</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
