修改选择积分界面

--- a/APP/Android/PointsLeague/app/build.gradle
+++ b/APP/Android/PointsLeague/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs/core-3.0.0.jar')
     implementation 'com.android.support:recyclerview-v7:27.1.1'
+    implementation 'com.android.support:support-v4:27.1.1'
 }
