--- a/Backstage/citi/src/main/resource/jdbc.properties
+++ b/Backstage/citi/src/main/resource/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://193.112.33.53:3306/whenviroment?useUnicode=true&characterEncoding=utf8
-jdbc.username=lzb
-jdbc.password=lzb
+jdbc.url=jdbc:mysql://193.112.44.141:3306/huaqi?useUnicode=true&characterEncoding=utf8
+jdbc.username=huaqi
+jdbc.password=huaqi
