--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,4 @@ APP/IOS/PointExchange/PointExchange.xcworkspace/xcuserdata/panyy.xcuserdatad/xcd
 Backstage/citi/.idea/*
 Backstage/citi/citi.iml
 Backstage/citi/target
+Backstage/citi/.idea/workspace.xml
