添加短信接口依赖

--- a/Backstage/citi/pom.xml
+++ b/Backstage/citi/pom.xml
@@ -40,6 +40,20 @@
       <version>1.14.1</version>
     </dependency>
 
+    <!-- 短信接口依赖 -->
+    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpcore -->
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpcore</artifactId>
+      <version>4.4.3</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.1</version>
+    </dependency>
+
 
     <!-- 单元测试依赖 -->
     <dependency>
