--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
 
     <!-- if you want to load images from a file OR from the internet -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <!-- 开启访问网络权限 -->
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <application
         android:allowBackup="true"
@@ -33,18 +33,14 @@
         </activity>
 
 
-        <activity
-            android:name=".LoginActivity"
-            android:parentActivityName=".MainActivity" />
+        <activity android:name=".LoginActivity" />
 
 
 
         <activity
             android:name=".PaymentFinishActivity"
             android:parentActivityName=".MainActivity" />
-        <activity
-            android:name=".PayCodeActivity"
-            android:parentActivityName=".MainActivity" />
+        <activity android:name=".PayCodeActivity"/>
         <activity
             android:name=".PayingActivity"
             android:parentActivityName=".PayCodeActivity" />
