--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -35,25 +35,22 @@
         <activity
             android:name=".PaymentFinishActivity"
             android:parentActivityName=".MainActivity" />
-        <activity android:name=".PayCodeActivity" />
+        <activity
+            android:name=".PayCodeActivity"
+            android:parentActivityName=".MainActivity" />
 
-
-        <activity android:name=".LoginActivity" />
         <activity
             android:name=".PayingActivity"
             android:parentActivityName=".PayCodeActivity" />
         <activity
-            android:name=".AboutUsActivity"
-            android:parentActivityName=".MainActivity" />
+            android:name=".AboutUsActivity" />
         <activity
-            android:name=".FeedbackActivity"
-            android:parentActivityName=".MainActivity" />
+            android:name=".FeedbackActivity" />
         <activity
             android:name=".FeedbackResultActivity"
             android:parentActivityName=".FeedbackActivity" />
         <activity
-            android:name=".GeneralSettingActivity"
-            android:parentActivityName=".MainActivity" />
+            android:name=".GeneralSettingActivity" />
         <activity android:name=".PayingDetailsActivity" />
         <activity android:name=".RegisterActivity"></activity>
     </application>
