--- a/.gitignore
+++ b/.gitignore
@@ -119,4 +119,7 @@ APP/IOS/PointExchange/PointExchange.xcworkspace/xcuserdata/panyy.xcuserdatad/xcd
 Backstage/citi/.idea/*
 Backstage/citi/citi.iml
 Backstage/citi/target
-Backstage/citi/.idea/workspace.xml
+
+Backstage/citiMerchant/citi.iml
+Backstage/citiMerchant/target/*
+Backstage/citiMerchant/.idea/*
