--- a/APP/Android/PointsLeague/app/build.gradle
+++ b/APP/Android/PointsLeague/app/build.gradle
@@ -19,6 +19,7 @@ android {
     }
 }
 
+
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:27.1.1'
@@ -38,5 +39,8 @@ dependencies {
     implementation 'com.nineoldandroids:library:2.4.0'
     implementation 'com.daimajia.slider:library:1.1.5@aar'
     implementation 'com.android.support:cardview-v7:27.1.1'
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.mcxiaoke.volley:library:1.0.19'
+    implementation 'com.github.sdfdzx:XVolley:v1.0.1'
 
 }
