--- a/Backstage/citiMerchant/pom.xml
+++ b/Backstage/citiMerchant/pom.xml
@@ -103,6 +103,12 @@
       <artifactId>gson</artifactId>
       <version>2.8.1</version>
     </dependency>
+      <dependency>
+          <groupId>org.jetbrains</groupId>
+          <artifactId>annotations-java5</artifactId>
+          <version>RELEASE</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 
   <build>
