--- a/Backstage/citiMerchant/pom.xml
+++ b/Backstage/citiMerchant/pom.xml
@@ -153,6 +153,16 @@
 
 
   <build>
+    <resources>
+      <resource>
+        <directory>src/main/java</directory>
+        <includes>
+          <include>**/*.properties</include>
+          <include>**/*.xml</include>
+        </includes>
+        <filtering>false</filtering>
+      </resource>
+    </resources>
     <finalName>citiMerchant</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
