--- a/APP/IOS/PointExchange/PointExchange/MenuData.plist
+++ b/APP/IOS/PointExchange/PointExchange/MenuData.plist
@@ -3,17 +3,13 @@
 <plist version="1.0">
 <dict>
 	<key>filter</key>
-	<string></string>
-	<key>Item 0</key>
-	<dict>
-		<key>name</key>
-		<string>筛选</string>
-	</dict>
+	<string>筛选</string>
 	<key>Area</key>
 	<array>
 		<dict>
 			<key>distance</key>
 			<array>
+				<string>附近</string>
 				<string>0.5km</string>
 				<string>1km</string>
 				<string>2km</string>
