--- a/Backstage/citiMerchant/pom.xml
+++ b/Backstage/citiMerchant/pom.xml
@@ -88,7 +88,16 @@
       <artifactId>mysql-connector-java</artifactId>
       <version>${mysql-driver.version}</version>
     </dependency>
-
+    <dependency>
+      <groupId>commons-io</groupId>
+      <artifactId>commons-io</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.2.1</version>
+    </dependency>
     <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
     <dependency>
       <groupId>javax.servlet</groupId>
