- 初步完成了商家详情页布局设计

--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -60,7 +60,8 @@
             <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
-        <activity android:name=".AllCardActivity"></activity>
+        <activity android:name=".AllCardActivity" />
+        <activity android:name=".DetailFindActivity"></activity>
     </application>
 
 </manifest>
