修改积分兑换： -删除不必要元素 -debug RecyclerView翻滚总和计算错误 -添加输入文字舰艇 -修改抵扣结果页

--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -41,14 +41,14 @@
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".PayingActivity"
-            android:parentActivityName=".PayCodeActivity" />
+            android:parentActivityName=".MainActivity" />
         <activity android:name=".AboutUsActivity" />
         <activity android:name=".FeedbackActivity" />
         <activity
             android:name=".FeedbackResultActivity"
             android:parentActivityName=".FeedbackActivity" />
         <activity android:name=".GeneralSettingActivity" />
-        <activity android:name=".PayingDetailsActivity" />
+
         <activity android:name=".RegisterActivity" />
         <activity android:name=".AddCardActivity" />
         <activity android:name=".HttpActivity">
