--- a/Backstage/citi/pom.xml
+++ b/Backstage/citi/pom.xml
@@ -127,7 +127,16 @@
       <version>3.1.0</version>
       <scope>provided</scope>
     </dependency>
-
+      <dependency>
+        <groupId>com.aliyun</groupId>
+        <artifactId>aliyun-java-sdk-core</artifactId>
+        <version>3.2.6</version>
+      </dependency>
+      <dependency>
+        <groupId>com.aliyun</groupId>
+        <artifactId>aliyun-java-sdk-cms</artifactId>
+        <version>5.0.4</version>
+      </dependency>
     <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
     <dependency>
       <groupId>com.google.code.gson</groupId>
