--- a/APP/Android/PointsLeague/app/build.gradle
+++ b/APP/Android/PointsLeague/app/build.gradle
@@ -44,4 +44,9 @@ dependencies {
     implementation 'com.mcxiaoke.volley:library:1.0.19'
     implementation 'com.github.sdfdzx:XVolley:v1.0.1'
 
+    implementation 'com.jakewharton:butterknife:8.8.1'
+
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
+
 }
