--- a/Backstage/citiMerchant/src/main/resource/jdbc.properties
+++ b/Backstage/citiMerchant/src/main/resource/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
-jdbc.url=jdbc:mysql://193.112.44.141:3306/huaqi?useUnicode=true&characterEncoding=utf8&useSSL=false
+jdbc.url=jdbc:mysql://193.112.44.141:3306/huaqi?useUnicode=true&characterEncoding=utf8&useSSL=false&useAffectedRows=true
 jdbc.username=huaqi
 jdbc.password=huaqi
