-积分兑换与后台连接 -我的订单

--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -62,7 +62,8 @@
         <activity android:name=".AllCardActivity" />
         <activity android:name=".DetailFindActivity" />
         <activity android:name=".CardInfoActivity" />
-        <activity android:name=".HistoryExchangeActivity"></activity>
+        <activity android:name=".HistoryExchangeActivity" />
+        <activity android:name=".MyOrderActivity"></activity>
     </application>
 
 </manifest>
