积分兑换记录

--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -63,7 +63,9 @@
         <activity android:name=".DetailFindActivity" />
         <activity android:name=".CardInfoActivity" />
         <activity android:name=".HistoryExchangeActivity" />
-        <activity android:name=".MyOrderActivity"></activity>
+        <activity android:name=".MyOrderActivity" />
+        <activity android:name=".models.PointsExchangeRecordActivity" />
+        <activity android:name=".PointsExchangeRecordActivity"></activity>
     </application>
 
 </manifest>
