--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -53,10 +53,10 @@
         <activity android:name=".HttpActivity">
 
             <!-- <intent-filter> -->
-            <!-- <action android:name="android.intent.action.MAIN" /> -->
+            <!-- <action android:totalPoints="android.intent.action.MAIN" /> -->
 
 
-            <!-- <category android:name="android.intent.category.LAUNCHER" /> -->
+            <!-- <category android:totalPoints="android.intent.category.LAUNCHER" /> -->
             <!-- </intent-filter> -->
         </activity>
         <activity android:name=".AllCardActivity" />
@@ -64,7 +64,7 @@
         <activity android:name=".CardInfoActivity" />
         <activity android:name=".HistoryExchangeActivity" />
         <activity android:name=".MyOrderActivity" />
-        <activity android:name=".models.PointsExchangeRecordActivity" />
+        <activity android:name=".PointsExchangeExpandListActivity" />
         <activity android:name=".PointsExchangeRecordActivity"></activity>
     </application>
 
