- 基本完成了首页的设计实现 - todo 动态加载 / 特殊情况处理，如无卡，一张卡 / 未登录状态处理 / Relative布局

--- a/APP/Android/PointsLeague/app/build.gradle
+++ b/APP/Android/PointsLeague/app/build.gradle
@@ -48,5 +48,6 @@ dependencies {
 
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
-
+    implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
+    implementation 'rouchuan.viewpagerlayoutmanager:viewpagerlayoutmanager:2.0.19'
 }
