完成二维码支付功能 去掉SearchView的下划线 制作仿IOS的ToolBar

--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -61,7 +61,8 @@
         <activity android:name=".MyOrderActivity" />
         <activity android:name=".PointsExchangeExpandListActivity" />
         <activity android:name=".PointsExchangeRecordActivity" />
-        <activity android:name=".BindCardActivity"></activity>
+        <activity android:name=".BindCardActivity" />
+        <activity android:name=".PayCodeFinishActivity"></activity>
     </application>
 
 </manifest>
