解决兑换积分底部栏不随软键盘上升

--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -36,6 +36,7 @@
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".PayingActivity"
+            android:windowSoftInputMode="stateVisible|adjustResize"
             android:parentActivityName=".MainActivity" />
         <activity android:name=".AboutUsActivity" />
         <activity android:name=".FeedbackActivity" />
