--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -36,8 +36,8 @@
             android:parentActivityName=".MainActivity" />
         <activity
             android:name=".PayingActivity"
-            android:windowSoftInputMode="stateVisible|adjustResize"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName=".MainActivity"
+            android:windowSoftInputMode="stateVisible|adjustResize" />
         <activity android:name=".AboutUsActivity" />
         <activity android:name=".FeedbackActivity" />
         <activity
@@ -63,8 +63,9 @@
         <activity android:name=".PointsExchangeExpandListActivity" />
         <activity android:name=".PointsExchangeRecordActivity" />
         <activity android:name=".BindCardActivity" />
-        <activity android:name=".DetailFindPayActivity"></activity>
-        <activity android:name=".PayCodeFinishActivity"></activity>
+        <activity android:name=".DetailFindPayActivity" />
+        <activity android:name=".PayCodeFinishActivity" />
+        <activity android:name=".CouponsDetailsActivity"></activity>
     </application>
 
 </manifest>
