--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -62,8 +62,9 @@
         <activity android:name=".PointsExchangeExpandListActivity" />
         <activity android:name=".PointsExchangeRecordActivity" />
         <activity android:name=".BindCardActivity" />
-        <activity android:name=".DetailFindPayActivity"></activity>
-        <activity android:name=".PayCodeFinishActivity"></activity>
+        <activity android:name=".DetailFindPayActivity" />
+        <activity android:name=".PayCodeFinishActivity" />
+        <activity android:name=".DetailFindPayFinishActivity"></activity>
     </application>
 
 </manifest>
