--- a/Backstage/citiMerchant/src/main/webapp/WEB-INF/web.xml
+++ b/Backstage/citiMerchant/src/main/webapp/WEB-INF/web.xml
@@ -35,5 +35,7 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
-
+<welcome-file-list>
+  <welcome-file>login.html</welcome-file>
+</welcome-file-list>
 </web-app>
