--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -65,8 +65,9 @@
         <activity android:name=".BindCardActivity" />
         <activity android:name=".DetailFindPayActivity" />
         <activity android:name=".PayCodeFinishActivity" />
-        <activity android:name=".DetailFindPayFinishActivity"></activity>
-        <activity android:name=".CouponsDetailsActivity"></activity>
+        <activity android:name=".DetailFindPayFinishActivity" />
+        <activity android:name=".CouponsDetailsActivity" />
+        <activity android:name=".BindAccountActivity"></activity>
     </application>
 
 </manifest>
