--- a/Backstage/citi/pom.xml
+++ b/Backstage/citi/pom.xml
@@ -97,7 +97,11 @@
       <artifactId>commons-dbcp</artifactId>
       <version>1.2.2</version>
     </dependency>
-
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework</groupId>
