--- a/Backstage/citi/pom.xml
+++ b/Backstage/citi/pom.xml
@@ -163,6 +163,13 @@
       <artifactId>gson</artifactId>
       <version>2.8.1</version>
     </dependency>
+
+    <!-- https://mvnrepository.com/artifact/gov.nist.math/jama -->
+    <dependency>
+      <groupId>gov.nist.math</groupId>
+      <artifactId>jama</artifactId>
+      <version>1.0.3</version>
+    </dependency>
   </dependencies>
 
   <build>
