MainActivity沉浸式状态栏

--- a/APP/Android/PointsLeague/app/build.gradle
+++ b/APP/Android/PointsLeague/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
 
     implementation 'com.ashokvarma.android:bottom-navigation-bar:2.0.4'
     implementation 'rouchuan.viewpagerlayoutmanager:viewpagerlayoutmanager:2.0.19'
+    implementation 'me.imid.swipebacklayout.lib:library:1.1.0'
 }
