--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity"
+            android:theme="@style/Theme.imgFullScreen"
             >
 
 
