--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -18,10 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity"
-
-            >
-
+        <activity android:name=".MainActivity">
 
             <!-- 启动项 -->
             <intent-filter>
@@ -40,8 +37,7 @@
         <activity
             android:name=".PayingActivity"
             android:parentActivityName=".MainActivity"
-            android:windowSoftInputMode="stateVisible|adjustResize"
-            />
+            android:windowSoftInputMode="stateVisible|adjustResize" />
         <activity android:name=".AboutUsActivity" />
         <activity android:name=".FeedbackActivity" />
         <activity
@@ -73,7 +69,8 @@
         <activity android:name=".CouponsDetailsActivity" />
         <activity android:name=".BindAccountActivity" />
         <activity android:name=".MyOrderActivity" />
-        <activity android:name=".OrderDetailActivity"></activity>
+        <activity android:name=".OrderDetailActivity" />
+        <activity android:name=".UserSettingActivity"></activity>
     </application>
 
 </manifest>
