userTab general setting 修改兑换积分toolBar

--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -70,7 +70,8 @@
         <activity android:name=".BindAccountActivity" />
         <activity android:name=".MyOrderActivity" />
         <activity android:name=".OrderDetailActivity" />
-        <activity android:name=".UserSettingActivity"></activity>
+        <activity android:name=".UserSettingActivity" />
+        <activity android:name=".SettingActivity"></activity>
     </application>
 
 </manifest>
