--- a/APP/IOS/PointExchange/PointExchange/Info.plist
+++ b/APP/IOS/PointExchange/PointExchange/Info.plist
@@ -10,7 +10,7 @@
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>App需要访问您的相册</string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<string>zh_CN</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
