完成了消费倾向问卷的设计实现，待接入接口

--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -71,7 +71,8 @@
         <activity android:name=".MyOrderActivity" />
         <activity android:name=".OrderDetailActivity" />
         <activity android:name=".UserSettingActivity" />
-        <activity android:name=".SettingActivity"></activity>
+        <activity android:name=".SettingActivity" />
+        <activity android:name=".QuestionnaireActivity"></activity>
     </application>
 
 </manifest>
