--- a/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
+++ b/APP/Android/PointsLeague/app/src/main/AndroidManifest.xml
@@ -18,9 +18,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
-
-        </activity>
+        <activity android:name=".MainActivity"></activity>
         <activity android:name=".LoginActivity" />
         <activity
             android:name=".PaymentFinishActivity"
@@ -68,14 +66,15 @@
         <activity android:name=".QuestionnaireActivity" />
         <activity android:name=".SearchActivity" />
         <activity android:name=".SplashActivity">
+
             <!-- 启动项 -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
+        <activity android:name=".GuideActivity"></activity>
     </application>
 
 </manifest>
